public/apps/aos-babbles/aos-babbles.css
:host {
	display: block;
	height: 100%;
	width: 100%;
	margin: 0px;
	padding: 0px;

}


a {
	text-decoration: none;
	color: #333333;
}


#roledefinition {
	padding: 5px 10px 5px 10px;
	margin: 0px 0px 20px 0px;
	background-color: #F5F5F5;
}



small {
	font-size: 0.75em;
	color: #666666;
	font-weight: 400;
}

#canvas {
	display: block;
	/*overflow: hidden;*/
	height: 100%;
	background-color: white;
	margin: 0px;
	padding: 20px 12% 0px 12%;
	width: 76%;
}



.leaderboard {
	width: 76vw;
	padding: 0vw 12vw 20px 12vw;
	background-color: #95d2b7;
	margin: 0px;
}

.stralendeA {
	width: 4vw;
	min-width: 50px;
	background-color: rgba(0,0,0,0.1);
	padding: 10px;
	margin: 0px;
}


.searchbox {
	margin: 0px 0px 0px 10px;
	padding: 0px;
	border: none;
}

.leaderboard h1 {
	font-weight: 300;
	color: #333333;
	font-size: 28px;

}

.appicon {
	width: 35px;
	margin-right: 10px;
	opacity: 0.5;
}




/*

ba-poster {
	margin: 20px 0px 20px 0px;
}*/

